# web-server-example

./: .env  .gitignore  .gitignore copy  Cargo.toml  README.md  docker-compose.yml
crates/compile_api_macros/: Cargo.toml
crates/compile_api_macros/src/: lib.rs
crates/dal-tx-impl/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: compile_api.rs  config.rs  errors.rs  lib.rs  test_api_endpoint.rs
dal/dal/: Cargo.toml
dal/dal/migrations/: 20240523088625_initial-setup.sql
dal/dal/src/: define_transactions.rs  lib.rs  migrations.rs
dal/dal/src/connections/: sqlx_postgres.rs
dal/dal/src/rate_limit_entries/: mod.rs  postgres_txs.rs  tx_definitions.rs
dal/dal/src/role_permissions/: mod.rs  postgres_tsx.rs  tx_definitions.rs
dal/dal/src/to_do_items/: mod.rs  postgres_tsx.rs  tx_definitions.rs
dal/dal/src/users/: mod.rs  postgres_txs.rs  tx_definitions.rs
dal/kernel/: Cargo.toml
dal/kernel/src/: email_invites.rs  lib.rs  rate_limit_entries.rs  role_permissions.rs  to_do_items.rs  users.rs
dal/kernel/src/token/: checks.rs  mod.rs  token.rs
dal/kernel/src/token/session_cache/: engine_mem.rs  engine_mock.rs  mod.rs  structs.rs  traits.rs
frontends/apiModules/: index.ts  package-lock.json  package.json  tsconfig.json
frontends/apiModules/auth/: localStorage.ts
frontends/apiModules/serverApi/: baseUrl.ts
frontends/apiModules/serverApi/auth/: index.ts
frontends/apiModules/serverApi/auth/auth/: index.ts  login.ts  requestPasswordReset.ts  resendConfirmationEmail.ts  url.ts
frontends/apiModules/serverApi/auth/roles/: assignRole.ts  index.ts  removeRole.ts  updateRoles.ts  url.ts
frontends/apiModules/serverApi/auth/users/: blockUser.ts  confirmUser.ts  createSuperUser.ts  createUser.ts  deleteUser.ts  getAllUsers.ts  getUser.ts  index.ts  resetPassword.ts  unblockUser.ts  url.ts
frontends/apiModules/serverApi/helpers/: apiTypes.ts  httpRequest.ts  sleep.ts
frontends/web/: .env  babel.config.js  components.json  esbuild.js  jest.config.ts  package-lock.json  package.json  postcss.config.js  storybook.test.js  tailwind.config.js  tsconfig.json
frontends/web/.storybook/: main.js  preview.js
frontends/web/public/: bundle.css  bundle.css.map  bundle.js  index.html  serve.json  tailwind.css
frontends/web/src/: index.css  index.tsx  tailwind.css
frontends/web/src/core/: ToDoItem.ts  ToDoItems.ts  interfaces.ts  utils.ts
frontends/web/src/core/__tests__/: ToDoItem.test.ts  basic.test.ts  utils.ts
frontends/web/src/ui/helpers/: passThroughRef.ts  sleep.ts  utils.ts
ingress/: Cargo.toml
ingress/src/: main.rs
nanoservices/auth/core/: Cargo.toml
nanoservices/auth/networking/: Cargo.toml
nanoservices/auth/networking/src/: utils.rs
nanoservices/auth/networking/src/api/: mod.rs
nanoservices/auth/networking/src/api/auth/: login.rs  logout.rs  mod.rs  refresh.rs  request_password_reset.rs  resend_confirmation_email.rs
nanoservices/auth/networking/src/api/roles/: assign_role.rs  mod.rs  remove_role.rs  update_roles.rs
nanoservices/auth/networking/src/api/users/: block.rs  confirm_user.rs  create.rs  create_super_admin.rs  delete.rs  get.rs  get_all_profiles.rs  mod.rs  reset_password.rs  unblock.rs  update.rs
nanoservices/email/core/: Cargo.toml
nanoservices/email/core/src/: lib.rs
nanoservices/email/core/src/api/: mod.rs
nanoservices/email/core/src/api/mailchimp_emails/: confirmation_email.rs  manage_rate_limit.rs  mod.rs  password_reset_email.rs
nanoservices/email/core/src/mailchimp_helpers/: create_mailchimp_template.rs  mailchimp_template.rs  mod.rs
nanoservices/email/core/src/mailchimp_traits/: mc_definitions.rs  mc_integrations.rs  mod.rs
nanoservices/to_do/core/: Cargo.toml
nanoservices/to_do/core/src/api/basic_actions/: complete_to_do_item.rs  create.rs  delete.rs  get_for_user.rs  get_pending_items_for_user.rs  mod.rs  reassign.rs
nanoservices/to_do/networking/: Cargo.toml
scripts/: kill_ingress.sh  run_ingress.sh
(+102 files in other folders)
